scribble-test/src/test/resources/bad/syntax/disamb/imports/Import18.scr
module good.syntax.disamb.imports.Import18;


import bad.syntax.disamb.imports.pack1.Import18b as Bar;


global protocol Foo(role A, role B)
{
	do good.syntax.disamb.imports.pack1.Import18b.Proto2(A, B);
}


